# tiny-dnn

./: .clang-format  CMakeLists.txt
src/: mnist.cpp  plotter.py
src/tiny_dnn/: network.h  nodes.h
src/tiny_dnn/activations/: activation_layer.h
src/tiny_dnn/core/kernels/: conv2d_op.h  conv2d_op_internal.h  fully_connected_grad_op.h  fully_connected_op_internal.h
src/tiny_dnn/io/: mnist_parser.h
src/tiny_dnn/layers/: average_pooling_layer.h  convolutional_layer.h  fully_connected_layer.h  layer.h
src/tiny_dnn/util/: parallel_for.h
